Set target location bar view frame to trigger autolayout.

Set the view frame in addition to animating view's layer bounds because
just changing layer bounds doesn't allow autolayout inside LBV to
trigger.
Note that after [_locationBarView layer].bounds = toBounds; the
LBV's frame will become LayoutRectGetRect(toLayout) anyway, but the
since the setter is not called, autolayout seems to be confused.
Also note that this is not necessary in new toolbar.

Bug: 792503, 789471, 788814
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: If3ccac317bb8d850f71275ee32c7b82d38f6af24
Reviewed-on: https://chromium-review.googlesource.com/813973
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Commit-Queue: Stepan Khapugin <stkhapugin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522784}
Former-commit-id: f2dfa460b70841647d1b5dcb7700fd0fd614737c